--- a/advancesearch.html
+++ b/advancesearch.html
@@ -14,7 +14,7 @@
         alt="Google Branding Image"
       />
       <nav>
-        <a href="googlesearch.html">Google Search</a>
+        <a href="index.html">Google Search</a>
         <a href="imagesearch.html">Images</a>
       </nav>
     </header>
