--- a/imagesearch.html
+++ b/imagesearch.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <a  href="googlesearch.html">Google Search</a>
+        <a  href="index.html">Google Search</a>
         <a  href="advancesearch.html">Advance Search</a>
     
     </nav>
