--- a/imagesearch.html
+++ b/imagesearch.html
@@ -23,7 +23,7 @@
    </div>   
     
     <div class="container">
-    <form>
+    <form action="https://google.com/images">
         <div class="mb-3">
           <input type="text" placeholder='Image Search'class="form-control rounded-pill" name="q" id="exampleInputEmail1" aria-describedby="emailHelp">  
         </div>
